@@ -1,10 +1,8 @@
-﻿using LoveSeat.Interfaces;
-
-namespace Bollywell.Hydra.Messaging.Config
+﻿namespace Bollywell.Hydra.Messaging.Config
 {
     public interface IConfigProvider
     {
-        IDocumentDatabase GetDb();
+        IStore GetStore();
         string HydraServer { get; }
         int? PollIntervalMs { get; }
         void ServerError(string server);
