@@ -23,9 +23,16 @@ namespace Bollywell.Hydra.Messaging.Config
         /// <param name="port">Port number of the messaging database. defaults to 5984</param>
         /// <param name="pollIntervalMs">Optional polling interval of the database, in milliseconds</param>
         public PreferenceOrderConfigProvider(IEnumerable<string> hydraServers, string database = DefaultDatabase, int port = DefaultPort, int? pollIntervalMs = null)
-            :base(hydraServers, database, port, pollIntervalMs)
+            : this(hydraServers.Select(s => new LoveSeatStore(s, s, database, port)), pollIntervalMs) {}
+
+        /// <summary>
+        /// Initialise messaging. Must be called before any attempt to send or listen.
+        /// </summary>
+        /// <param name="stores">Hydra stores to communicate with</param>
+        /// <param name="pollIntervalMs">Optional polling interval of the database, in milliseconds</param>
+        public PreferenceOrderConfigProvider(IEnumerable<IStore> stores, int? pollIntervalMs = null) : base(stores, pollIntervalMs)
         {
-            _servers = hydraServers.ToList();
+            _servers = stores.Select(s => s.Name).ToList();
             Enumerable.Range(0, _servers.Count).ToList().ForEach(index => _serverIndices[_servers[index]] = index);
             Start();
         }
