@@ -68,6 +68,8 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="HydraService.cs" />
     <Compile Include="IHydraService.cs" />
+    <Compile Include="IStore.cs" />
+    <Compile Include="LoveSeatStore.cs" />
     <Compile Include="MessageFetchers\HydraByTopicByDestinationMessageFetcher.cs" />
     <Compile Include="MessageFetchers\HydraByTopicMessageFetcher.cs" />
     <Compile Include="MessageFetchers\MessageFetcherBase.cs" />
